--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "q": "^1.4.1",
     "request": "^2.72.0",
     "socket.io": "2.0.2",
-    "twilio": "^3.5.0",
+    "twilio": "2.1.1",
     "snyk": "^1.69.0"
   },
   "snyk": true
